    non-alphanumeric characters to underscores.

  - Supply a better error message when a construction variable expansion
    has an unknown attribute.

  - Documentation changes:  Update the man page to describe use of
    filenames or Nodes in $LIBS.

  - Add support for Intel C++ beta 9.0 (both 32 and 64 bit versions).

  - Document the new $FRAMEWORK* variables for Mac OS X.

  From Chris Pawling:

  - Have the linkloc tool use $MSVS_VERSION to select the Microsoft
    Visual Studio version to use.

  From Karol Pietrzak:

  - Add $RPATH (-R) support to the Sun linker Tool (sunlink).

  - Add a description of env.subst() to the man page.

  From Chris Prince:

  - Look in the right directory, not always the local directory, for a
    same-named file or directory conflict on disk.

  - On Windows, preserve the external environment's %SYSTEMDRIVE%
    variable, too.

  From Kevin Quick:

  - Fix the Builder name returned from ListBuilders and other instances
    of subclasses of the BuilderBase class.

  - Add Builders and construction variables to support rpcgen:
    RPCGenClient(), RPCGenHeader(), RPCGenService(), RPCGenXDR(),
    $RPCGEN, $RPCGENFLAGS, $RPCGENCLIENTFLAGS, $RPCGENHEADERFLAGS,
    $RPCGENSERVICEFLAGS, $RPCGENXDRFLAGS.

  - Update the man page to document that prefix and suffix Builder
    keyword arguments can be strings, callables or dictionaries.

  - Provide more info in the error message when a user tries to build
    a target multiple ways.

  - Fix Delete() when a file doesn't exist and must_exist=1.  (We were
    unintentionally dependent on a bug in versions of the Python shutil.py
    module prior to Python 2.3, which would generate an exception for
    a nonexistent file even when ignore_errors was set.)

  - Only replace a Node's builder with a non-null source builder.

  - Fix a stack trace when a suffix selection dictionary is passed
    an empty source file list.

  - Allow optional names to be attached to Builders, for default